--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -254,3 +254,14 @@ a:focus {
     margin-right: 250px;
   }
 }
+
+.Inboxnumber {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  color: #c23616;
+}
+
+.zeroInbox {
+  color: grey;
+}
