--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
   position: relative;
+  line-height: 1.3 !important;
 
   ::selection {
     background: #8854d0;
