--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,128 +1,132 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12 col-md-6 title">
-      <h1 *ngIf="project">{{project.title}}</h1>
-    </div>
-    <div class="col-12 col-md-6 actions topbtns">
-      <button (click)="canSearch()" *ngIf="!search" class="addmember">Add member</button>
-
-      <span class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" (click)="btnContainer()">
-          Actions
-          <span class="caret"></span></button>
-        <ul class="dropdown-menu" id="btnDrop">
-          <li (click)="changeRoles()">Change Roles</li>
-          <li (click)="exitProject()" class="red">Exit Project</li>
-          <li (click)="initializeRemoveMember()" class="red">Remove member</li>
-          <li (click)="deleteProject()" class="red">Delete Project</li>
-        </ul>
-      </span>
-    </div>
-    <div class="col-12 col-md-6">
-      <div *ngIf="search" class="search">
-        <input type="text" placeholder="email" (keyup)="searchUser($event)" #selectUser class="search_input">
-        <button (click)="addMember()">Add</button>&nbsp;&nbsp;
-        <button (click)="closeSearch()">Cancel</button>
-        <div *ngFor="let user of userList" class="userList" (click)="addToInput(user)">
-          {{user.name}} &nbsp;&nbsp;&nbsp;{{user.email}}
-        </div>
-        <div *ngIf="message" style="font-family: sans-serif; color:red;"><i>{{message}}</i></div>
+<div class="superContainer">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 col-md-6 title">
+        <h1 *ngIf="project">{{project.title}}</h1>
       </div>
-    </div>
-    <div class="col-12 col-md-6 users">
-      <span *ngFor="let user of users" (click)="viewProfile(user)" class="users_user">
-        <b>{{user.userId.name[0]}}</b>
-        <div class="users_user_tooltip">
-          <p class="users_user_tooltip_name">{{user.userId.name}}</p>
-          <p class="users_user_tooltip_email">({{user.userId.email}})</p>
-          <b>{{user.role}}</b>
+      <div class="col-12 col-md-6 actions topbtns">
+        <button (click)="canSearch()" *ngIf="!search" class="addmember">Add member</button>
+
+        <span class="dropdown">
+          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" (click)="btnContainer()">
+            Actions
+            <span class="caret"></span></button>
+          <ul class="dropdown-menu" id="btnDrop">
+            <li (click)="changeRoles()">Change Roles</li>
+            <li (click)="exitProject()" class="red">Exit Project</li>
+            <li (click)="initializeRemoveMember()" class="red">Remove member</li>
+            <li (click)="deleteProject()" class="red">Delete Project</li>
+          </ul>
+        </span>
+      </div>
+      <div class="col-12 col-md-6">
+        <div *ngIf="search" class="search">
+          <input type="text" placeholder="email" (keyup)="searchUser($event)" #selectUser class="search_input">
+          <button (click)="addMember()">Add</button>&nbsp;&nbsp;
+          <button (click)="closeSearch()">Cancel</button>
+          <div *ngFor="let user of userList" class="userList" (click)="addToInput(user)">
+            {{user.name}} &nbsp;&nbsp;&nbsp;{{user.email}}
+          </div>
+          <div *ngIf="message" style="font-family: sans-serif; color:red;"><i>{{message}}</i></div>
         </div>
-      </span>
+      </div>
+      <div class="col-12 col-md-6 users">
+        <span *ngFor="let user of users" (click)="viewProfile(user)" class="users_user">
+          <b>{{user.userId.name[0]}}</b>
+          <div class="users_user_tooltip">
+            <p class="users_user_tooltip_name">{{user.userId.name}}</p>
+            <p class="users_user_tooltip_email">({{user.userId.email}})</p>
+            <b>{{user.role}}</b>
+          </div>
+        </span>
+      </div>
+
     </div>
 
   </div>
+  <hr>
 
-</div>
-<hr>
+  <button (click)="createBug()" class="createBug">
+    <i class="fa fa-bug" aria-hidden="true"></i>&nbsp;
+    Add a new Bug
+  </button>
+  <br><br>
 
-<button (click)="createBug()" class="createBug">
-  <i class="fa fa-bug" aria-hidden="true"></i>&nbsp;
-  Add a new Bug
-</button>
-<br><br>
+  <div *ngIf="bugs.length == 0">No new bugs</div>
 
-<div *ngIf="bugs.length == 0">No new bugs</div>
-
-<div style="overflow-x:auto;">
-  <table *ngIf="bugs.length !== 0" id="bugtable">
-    <tr>
-      <th>No.</th>
-      <th>Title</th>
-      <th>Subtitle</th>
-      <th>Priority</th>
-      <th>Status</th>
-      <th>Deadline</th>
-      <th>Devs</th>
-      <!-- <th class="actions">Watch</th> -->
-      <th class="actions">Solve</th>
-      <th class="actions">Assign Dev</th>
-      <th class="actions">Edit</th>
-      <th class="actions">Archive</th>
-    </tr>
-    <tr *ngFor="let bug of bugs;let i=index" [ngClass]="{update:updateMap.get(i)}">
-      <td>{{i+1}}.</td>
-      <td class="bug_title"><input type="text" value="{{bug.title}}" #bugTitle></td>
-      <td class="bug_subTitle">
-        <span *ngIf="!bug.subtitle && !updateMap.get(i)">---</span>
-        <input type="text" value="{{bug.subtitle}}" #bugsubTitle>
-      </td>
-      <td>
-        <select name="" id="" #bugPriority>
-          <option value="" selected disabled hidden>{{bug.priority}}</option>
-          <option value="Low">Low</option>
-          <option value="Moderate">Moderate</option>
-          <option value="High">High</option>
-          <option value="Critical">Critical</option>
-        </select>
-      </td>
-      <td>
-        <select name="" id="" #bugStatus>
-          <option value="" selected disabled hidden>{{bug.status}}</option>
-          <option value="open">open</option>
-          <option value="closed">closed</option>
-        </select>
-      </td>
-      <td>
+  <div style="overflow-x:auto;">
+    <table *ngIf="bugs.length !== 0" id="bugtable">
+      <tr>
+        <th>No.</th>
+        <th>Title</th>
+        <th>Subtitle</th>
+        <th>Priority</th>
+        <th>Status</th>
+        <!-- <th>Deadline</th> -->
+        <th>Devs</th>
+        <!-- <th class="actions">Watch</th> -->
+        <th class="actions">Solve</th>
+        <th class="actions">Assign Dev</th>
+        <th class="actions">Edit</th>
+        <th class="actions">Archive</th>
+      </tr>
+      <tr *ngFor="let bug of bugs;let i=index" [ngClass]="{update:updateMap.get(i)}">
+        <td>{{i+1}}.</td>
+        <td class="bug_title"><input type="text" value="{{bug.title}}" #bugTitle></td>
+        <td class="bug_subTitle">
+          <span *ngIf="!bug.subtitle && !updateMap.get(i)">---</span>
+          <input type="text" value="{{bug.subtitle}}" #bugsubTitle>
+        </td>
+        <td>
+          <select name="" id="" #bugPriority>
+            <option value="" selected disabled hidden>{{bug.priority}}</option>
+            <option value="Low">Low</option>
+            <option value="Moderate">Moderate</option>
+            <option value="High">High</option>
+            <option value="Critical">Critical</option>
+          </select>
+        </td>
+        <td>
+          <select name="" id="" #bugStatus>
+            <option value="" selected disabled hidden>{{bug.status}}</option>
+            <option value="open">open</option>
+            <option value="closed">closed</option>
+          </select>
+        </td>
+        <!-- <td>
         <input type="date" value="{{bug.deadline.split('T')[0]}}" #bugDeadline>
-      </td>
-      <td class="devsColumn">
-        <span *ngFor="let dev of bug.assignedDev;let k=index">
-          {{dev.userId.name}}
-          <span *ngIf="bug.assignedDev.length >1 && !(bug.assignedDev.length-1 === k)">,</span>
-          <br>
-        </span>
-      </td>
-      <!-- <td class="watch" [ngClass]="{temp: bug.watch}">
+      </td> -->
+        <td class="devsColumn">
+          <span *ngFor="let dev of bug.assignedDev;let k=index">
+            {{dev.userId.name}}
+            <span *ngIf="bug.assignedDev.length >1 && !(bug.assignedDev.length-1 === k)">,</span>
+            <br>
+          </span>
+        </td>
+        <!-- <td class="watch" [ngClass]="{temp: bug.watch}">
         <input type="checkbox" [checked]="bug.watch" (click)="watchBug(bug)">
       </td> -->
-      <td class="actions">
-        <button *ngIf="!bug.solution" (click)="solveBug(bug)">Solve</button>
-        <button *ngIf="bug.solution" (click)="ViewSolution(bug)">View Solution</button>
-      </td>
-      <td class="actions"><button (click)=AssignDev(bug)>Assign Dev</button></td>
-      <td class="actions">
-        <button *ngIf="updateMap.get(i)"
-          (click)="updateBug(bug._id,i,bugTitle.value, bugsubTitle.value,bugPriority.selectedOptions[0].text,bugStatus.selectedOptions[0].text,bugDeadline.value)"
-          class="actions_update">Update</button>
-        <button *ngIf="updateMap.get(i)" (click)="cancel(i)" class="actions_cancel">Cancel</button>
-        <button (click)="editBug(bug, i)" *ngIf="!updateMap.get(i)">Edit</button>
-      </td>
-      <td class="actions"><button (click)="ArchiveBug(bug)" class="archive">Archive</button></td>
-    </tr>
-  </table>
-</div>
+        <td class="actions">
+          <button *ngIf="!bug.solution" (click)="solveBug(bug)">Solve</button>
+          <button *ngIf="bug.solution" (click)="ViewSolution(bug)">View Solution</button>
+        </td>
+        <td class="actions"><button (click)=AssignDev(bug)>Assign Dev</button></td>
+        <td class="actions">
+          <button *ngIf="updateMap.get(i)"
+            (click)="updateBug(bug._id,i,bugTitle.value, bugsubTitle.value,bugPriority.selectedOptions[0].text,bugStatus.selectedOptions[0].text,bugDeadline.value)"
+            class="actions_update">Update</button>
+          <button *ngIf="updateMap.get(i)" (click)="cancel(i)" class="actions_cancel">Cancel</button>
+          <button (click)="editBug(bug, i)" *ngIf="!updateMap.get(i)">Edit</button>
+        </td>
+        <td class="actions"><button (click)="ArchiveBug(bug)" class="archive">Archive</button></td>
+      </tr>
+    </table>
+  </div>
 
-<div *ngIf="advcalled" class="assignDevModal">
+  <div *ngIf="advcalled || showSolveArea || viewSolution || changeRolesCalled" class="overlay_backdrop" id="overlay">
+  </div>
+
+  <!-- <div *ngIf="advcalled" class="assignDevModal">
   <div class="assignDevModal_container">
 
     <div *ngFor="let user of bugUsers;let n=index" class="assignDevModal_dev"
@@ -133,47 +137,61 @@
   </div>
   <button (click)="assignBugToDevs()" class="assignDevModal_assign">Assign</button>
   <button (click)="CanceldevAssign()" class="assignDevModal_cancel">Cancel</button>
-</div>
+</div> -->
 
-<div *ngIf="advcalled || showSolveArea || viewSolution || changeRolesCalled" class="assignDevModal_backdrop"></div>
-
-<div *ngIf="showSolveArea" class="ViewSolution">
-  <textarea name="" id="" cols="30" rows="10" #solution></textarea><br><br>
-  <button (click)="submitSolution()" style="margin-right: 20px;">Submit</button>
-  <button (click)="cancelSolution()">Cancel</button>
-</div>
-
-<div *ngIf="viewSolution" class="ViewSolution">
-  <textarea name="" id="" cols="30" rows="10" #viewSolutionCode></textarea>
-  <br><br>
-  <button (click)="closeSolution()">Close</button>
-</div>
-
-<div *ngIf="changeRolesCalled" class="RoleUserContainer">
-  <div *ngIf="bugUsers.length ===0">
-    Currently there are no teammates in your project. Invite them by clicking add member button
-  </div>
-  <div *ngIf="bugUsers.length !==0">
-    Please select one of the users:
-    <hr>
-    <div *ngIf="showRoleDevs">
-      <div *ngFor="let user of bugUsers" class="role_devs" (click)="selectDevToChangeRole(user)">
+  <div *ngIf="advcalled" class="assignDevModal">
+    <h4 *ngIf="bugUsers.length == 0">You do not have any teammates yet! Add teammates to project to asssign bugs to them
+    </h4>
+    <div class="assignDevModal_list">
+      <div *ngFor="let user of bugUsers;let n=index" class="assignDevModal_dev"
+        [ngClass]="{selectedDevs: assignDevMaps.get(user.userId._id)}" (click)="selectDev(user, user.userId._id)">
         <p>{{user.userId.name}}</p>
-        <p>{{user.role}}</p>
+        <p>{{user.userId.email}}</p>
       </div>
     </div>
-    <div *ngIf="assignRoles">
-      <p>Name: <b>{{currentDev}}</b></p>
-      <P>Current Role: <b>{{currentRole}}</b></P>
-      <select name="" id="" #roleSelect>
-        <option value="" selected disabled hidden>{{currentRole}}</option>
-        <option value="dev">Developer</option>
-        <option value="admin">Admin</option>
-      </select>
-      <br><br>
-      <button (click)="changeRoleFinal(roleSelect)">Change Role</button>
+    <br>
+    <button (click)="assignBugToDevs()" class="assignDevModal_assign">Assign</button>
+    <button (click)="CanceldevAssign()" class="assignDevModal_cancel">Cancel</button>
+  </div>
+
+  <div *ngIf="showSolveArea" class="ViewSolution">
+    <textarea name="" id="" cols="30" rows="10" #solution></textarea><br><br>
+    <button (click)="submitSolution()" style="margin-right: 20px;">Submit</button>
+    <button (click)="cancelSolution()">Cancel</button>
+  </div>
+
+  <div *ngIf="viewSolution" class="ViewSolution">
+    <textarea name="" id="" cols="30" rows="10" #viewSolutionCode></textarea>
+    <br><br>
+    <button (click)="closeSolution()">Close</button>
+  </div>
+
+  <div *ngIf="changeRolesCalled" class="RoleUserContainer">
+    <div *ngIf="bugUsers.length ===0">
+      Currently there are no teammates in your project. Invite them by clicking add member button
     </div>
-  </div><br><br>
-  <button (click)="cancelRole()">Cancel</button>
+    <div *ngIf="bugUsers.length !==0">
+      Please select one of the users:
+      <hr>
+      <div *ngIf="showRoleDevs">
+        <div *ngFor="let user of bugUsers" class="role_devs" (click)="selectDevToChangeRole(user)">
+          <p>{{user.userId.name}}</p>
+          <p>{{user.role}}</p>
+        </div>
+      </div>
+      <div *ngIf="assignRoles">
+        <p>Name: <b>{{currentDev}}</b></p>
+        <P>Current Role: <b>{{currentRole}}</b></P>
+        <select name="" id="" #roleSelect>
+          <option value="" selected disabled hidden>{{currentRole}}</option>
+          <option value="dev">Developer</option>
+          <option value="admin">Admin</option>
+        </select>
+        <br><br>
+        <button (click)="changeRoleFinal(roleSelect)">Change Role</button>
+      </div>
+    </div><br><br>
+    <button (click)="cancelRole()">Cancel</button>
+  </div>
 </div>
 <ngx-spinner></ngx-spinner>
