deadline kept to resolve db issues

--- a/src/app/create-bug/create-bug.component.html
+++ b/src/app/create-bug/create-bug.component.html
@@ -22,12 +22,12 @@
       <option value="Critical">Critical</option>
     </select>
   </div>
-  <!-- <div>
+  <div>
     <label for="">Deadline</label>
-  </div> -->
-  <!-- <div>
+  </div>
+  <div>
     <input type="date" #deadline>
-  </div> -->
+  </div>
   <div>
     <label for="">
       Watch:
