UI revamped for featured functions, new feature added: view title and subtitle of bug on click

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
     <p style="color: #30336b;">Do not have an account? Create one below:</p>
     <button (click)="register()" class="register">Create new account</button>
     <br>
-    <h1 *ngIf="message">{{message}}</h1>
+    <h1 *ngIf="message" style="color: #e74c3c;">{{message}}</h1>
 </div>
 
 <p class="forgot" *ngIf="!fgpass">
