--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,3 +1,4 @@
+$margin-required: 2vh;
 .superContainer {
   position: relative;
 }
@@ -171,6 +172,15 @@ td {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+
+  &:hover {
+    input {
+      overflow: visible;
+      overflow-x: scroll;
+      text-overflow: unset;
+      white-space: unset;
+    }
+  }
 }
 
 .actions {
@@ -220,112 +230,207 @@ td {
   }
 }
 
-.assignDevModal {
+.overlay_backdrop {
   position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 30;
+  top: 0px;
+  left: 0px;
+  z-index: 99;
+  background: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
+}
+
+@media only screen and (max-width: 770px) {
+  .popupModal {
+    top: 0 !important;
+    left: 0 !important;
+    height: 90vh !important;
+    width: 92vw !important;
+  }
+}
+
+.popupModal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 82vw;
+  height: 85vh;
   background: white;
-  border-radius: 5px;
-  width: 60vw;
-  height: 70vh;
-  padding: 20px;
+  z-index: 100;
 
-  &_list {
-    height: 80%;
+  &_content {
     overflow-y: scroll;
-  }
+    height: 75vh;
 
-  &_container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 2vh;
-    margin-bottom: 2vh;
-  }
+    &_head {
+      background: #3498db;
+      padding: 2px;
+      position: sticky;
+      text-align: center;
+      top: 0;
+      left: 0;
+      // color: white;
+    }
 
-  &_dev {
-    border: 0.5px solid #9a68f2;
-    border-radius: 5px;
-    padding: 10px;
-    cursor: pointer;
+    .actionPage {
+      &_1,
+      &_2 {
+        padding-left: 10px;
 
-    p {
-      margin: 0;
+        .user {
+          display: grid;
+          width: 30%;
+          grid-template-columns: 5fr 2fr;
+          margin: 2vh 0;
+          box-shadow: 0px 0px 10px #d3d3d3;
+          cursor: pointer;
+
+          &_name {
+            padding: 10px;
+            background: #3498db;
+            color: white;
+          }
+          &_role {
+            padding: 10px;
+            border-left: 1px solid black;
+            background: #353b48;
+            color: white;
+            text-align: center;
+          }
+
+          &:hover {
+            transform: scale(1.05);
+          }
+        }
+      }
+
+      &_3,
+      &_4 {
+        textarea {
+          width: 100%;
+          height: 60vh !important;
+          border: 1px solid red !important;
+          overflow-y: scroll;
+        }
+      }
+
+      &_5 {
+        padding-left: 10px !important;
+      }
     }
   }
 
-  button {
-    margin-right: 10px;
-    transition: 0.2s;
+  .selectedDev {
+    background: green;
+    color: white;
+    border-color: transparent;
+    // color: black;
+    p {
+      color: black;
+    }
   }
-}
 
-.overlay_backdrop {
-  position: absolute;
-  top: 0%;
-  left: 0;
-  width: 100%;
-  height: 94vh;
-  z-index: 20;
-  color: transparent;
-  background: rgba(black, 0.5);
-  overflow: hidden;
-}
+  .devList {
+    margin: 5vh $margin-required;
+    border: 1px solid transparent;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #d3d3d3;
 
-.selectedDevs {
-  background: #3498db;
-  background: #fbc531;
-  color: white;
-}
+    &_container {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-gap: 10px;
+    }
 
-.ViewSolution {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 30;
-  background: white;
-  border-radius: 5px;
-  width: 60vw;
-  height: 70vh;
-  padding: 20px;
-  box-sizing: border-box;
+    &_devs {
+      border: 0.5px solid #9a68f2;
+      background: white;
+      padding: 10px;
+      cursor: pointer;
+      transition: 0.2s;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px #d3d3d3;
 
-  textarea {
-    border: 0.5px solid #9a68f2;
-    width: 50vw;
-    height: 50vh;
-    resize: none;
-    overflow-y: scroll;
+      h5,
+      p {
+        margin: 0;
+      }
+
+      p {
+        color: grey;
+      }
+    }
+  }
+
+  @media only screen and (max-width: 772px) {
+    .createBtn {
+      width: 50vw;
+    }
+
+    .selectedDev {
+      background: green;
+      color: white;
+      border-color: transparent;
+      // color: black;
+      p {
+        color: black;
+      }
+    }
+
+    .devList {
+      &_container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
+      }
+    }
+  }
+
+  @media only screen and (min-width: 772px) {
+    .selectedDev {
+      background: green;
+      color: white;
+      border-color: transparent;
+      // color: black;
+      p {
+        color: black;
+      }
+
+      &:hover {
+        background: rgba(green, 0.6) !important;
+        border-color: transparent;
+      }
+    }
+
+    .devList {
+      &_devs {
+        &:hover {
+          background: rgba(orange, 0.7);
+          color: white;
+          border-color: transparent;
+        }
+      }
+    }
+  }
+
+  &_btns {
+    padding-top: 10px;
+    border-top: 1px solid #d3d3d3;
+    height: 5vh;
+
+    &_action {
+      margin-left: 10px;
+    }
+
+    &_cancel {
+      margin-left: 10px;
+    }
   }
 }
 
 .createBug {
   margin: 3vh 0;
-}
-
-.RoleUserContainer {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: white;
-  z-index: 30;
-  width: 50vh;
-  height: 50vh;
-  padding: 10px;
-  .role_devs {
-    padding: 5px;
-    background: #7f8fa6;
-    color: white;
-    cursor: pointer;
-    transition: 0.2s;
-
-    &:hover {
-      transform: scale(1.01);
-    }
-  }
 }
 
 .watch {
@@ -341,46 +446,25 @@ td {
   }
 }
 
-#btnDrop {
-  .red {
-    color: #e84118;
+.dropdown-item {
+  cursor: pointer;
 
-    &:hover {
-      background: #e84118;
-    }
+  &:hover {
+    background: #3498db;
+    color: white;
   }
+}
 
-  li {
-    padding: 10px;
+.red {
+  color: #e84118 !important;
 
-    &:hover {
-      background: #3498db;
-      color: white;
-      cursor: pointer;
-    }
+  &:hover {
+    background: #e84118;
+    color: white !important;
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .assignDevModal {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    z-index: 30;
-    background: white;
-    border-radius: 5px;
-    width: 100vw;
-    height: 100vh;
-    padding: 20px;
-
-    &_container {
-      display: grid;
-      grid-template-columns: auto auto auto;
-      grid-gap: 2vh;
-      margin-bottom: 2vh;
-    }
-  }
-
   .topbtns {
     display: flex;
     flex-direction: flex-start;
@@ -414,17 +498,4 @@ td {
 }
 
 @media only screen and (min-width: 600px) {
-  .assignDevModal {
-    &_dev {
-      &:hover {
-        background: lightblue;
-      }
-    }
-  }
-
-  .selectedDevs {
-    &:hover {
-      background: rgba(#424242, 0.7);
-    }
-  }
 }
